# cruftbot

./: .0pdd.yml  .coveragerc  .flake8  .gitignore  .pdd  .pre-commit-config.yaml  .yamllint  Dockerfile  Gemfile  README.markdown  azure-pipelines.yml  dangerfile.ts  docker-compose.yml  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
cruftbot/: wsgi.py
cruftbot/entities/: __init__.py
cruftbot/infrastructure/: apps.py  implementations.py
cruftbot/infrastructure/settings/: development.py  production.py
cruftbot/infrastructure/settings/components/: activity_stream.py  axes.py  base.py  content_security_policy.py  cors_headers.py  debug_toolbar.py  extensions.py  extra_checks.py  migration_linter.py  node_assets.py  querycount.py  staticfiles.py  templates.py  test_migrations.py
cruftbot/infrastructure/urls/: __init__.py  development.py  production.py
cruftbot/jinja2/: index.html
cruftbot/settings/: __init__.py  development.py  production.py
cruftbot/settings/components/: activity_stream.py  allauth.py  authentication.py  axes.py  base.py  content_security_policy.py  debug_toolbar.py  extensions.py  extra_checks.py  migration_linter.py  node_assets.py  querycount.py  rest_framework.py  staticfiles.py  templates.py  test_migrations.py
cruftbot/templates/: index.html
cruftbot/urls/: __init__.py  development.py  production.py
cruftbot/usecases/: __init__.py  implementations.py
cruftbot/usecases/scopes/: __init__.py
cruftbot/usecases/services/: __init__.py
cruftbot/usecases/shapes/: __init__.py
cruftbot/views/: index.py  schema.py
docs/: contributing.md  index.md
examples/: __init__.py  implementations.py
scripts/: check  console  deploy  deploy-docs  install  lint  review  serve  serve-docs  test
